# OctoPrint-LatheEngraver

./: MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  setup.py
octoprint_latheengraver/: __init__.py  _bgs.py
octoprint_latheengraver/static/css/: latheengraver.css  latheengraver_settings.css
octoprint_latheengraver/static/js/: bgs_terminal.js  latheengraver.js  latheengraver_settings.js
octoprint_latheengraver/static/txt/: grbl_settings.txt
octoprint_latheengraver/templates/: latheengraver_settings.jinja2  latheengraver_tab.jinja2  latheengraver_wizard.jinja2
